--- a/React/ReactTS/reactyperscript/package.json
+++ b/React/ReactTS/reactyperscript/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "estudandoreact",
+  "name": "reactyperscript",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -9,20 +9,18 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "next": "^15.0.2",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
-    "react-easy-crop": "^5.1.0",
-    "tailwind": "^4.0.0",
-    "tailwindcss": "^3.4.14"
+    "react": "19.0.0-rc-02c0e824-20241028",
+    "react-dom": "19.0.0-rc-02c0e824-20241028",
+    "next": "15.0.2"
   },
   "devDependencies": {
+    "typescript": "^5",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
-    "eslint": "^8",
-    "eslint-config-next": "14.2.11",
     "postcss": "^8",
-    "typescript": "^5"
+    "tailwindcss": "^3.4.1",
+    "eslint": "^8",
+    "eslint-config-next": "15.0.2"
   }
 }
